--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  expandable: ^3.0.1
+  pin_code_fields: ^6.0.0
+  pin_entry_text_field: ^0.1.3
+  provider: ^3.1.0
+  url_launcher: ^3.0.3
+  dynamic_theme: ^1.0.1
   cupertino_icons: ^1.0.0
   sqflite: ^1.3.0
   path_provider: ^1.6.21
@@ -45,16 +51,20 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   assets:
-    - assets/images/shabab.jpg
-    - assets/images/shabab2.png
-    - assets/images/shabab.last.jpg
+    - assets/images/background.png
+    - assets/images/hemtak.png
     - assets/images/jordan.jpeg
+    - assets/images/jordan3.png
+    - assets/images/loader.gif
+    - assets/images/shabab2.png
     - assets/logos/facebook.jpg
     - assets/logos/google.jpg
-    - assets/images/hemtak.png
-    - assets/images/loader.gif
-    - assets/images/background.png
-    - assets/images/volunteer5.5.png
+    - assets/images/v.png
+    - assets/logos/twitter3.jpg
+    - assets/logos/youtube2.png
+    - assets/images/disability.jpeg
+    - assets/logos/GoldenGym.png
+    - assets/logos/fireFly.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
